--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-            # Install latest CMake.
+      with:
+        submodules: 'recursive'
+        
+    # Install latest CMake.
     - uses: lukka/get-cmake@latest
 
     - name: Restore artifacts, or run vcpkg, build and cache artifacts
