重构运行状态指令; 引入 fmt 库;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(nlohmann_json CONFIG REQUIRED)
 find_package(unofficial-sqlite3 CONFIG REQUIRED)
 find_package(SQLiteCpp CONFIG REQUIRED)
 find_package(glog CONFIG REQUIRED)
+find_package(fmt CONFIG REQUIRED)
 
 # 不要构建 mirai-cpp 自带的 examples
 set(MIRAI_CPP_BUILD_EXAMPLES OFF CACHE BOOL "Build examples" FORCE)
@@ -39,6 +40,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE unofficial::sqlite3::sqlite3)
 target_link_libraries(${PROJECT_NAME} PRIVATE SQLiteCpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE glog::glog)
 target_link_libraries(${PROJECT_NAME} PRIVATE HTMLReader)
+target_link_libraries(${PROJECT_NAME} PRIVATE fmt::fmt)
 target_compile_definitions(${PROJECT_NAME} PRIVATE MIRAICPP_STATICLIB)
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL GNU)
