--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,12 @@ jobs:
       with:
         submodules: 'recursive'
         
+    - name: Install gcc-10
+      shell: bash
+      run: |
+           sudo apt update
+           sudo apt install gcc-10 g++-10
+        
     # Install latest CMake.
     - uses: lukka/get-cmake@latest
 
@@ -21,18 +27,13 @@ jobs:
       uses: lukka/run-vcpkg@main
       id: runvcpkg
       with:
-        vcpkgArguments: 'nlohmann-json:x64-linux sqlite3:x64-linux SQLiteCpp:x64-linux glog:x64-linux curl:x64-linux'
+        vcpkgArguments: 'nlohmann-json:x64-linux sqlite3:x64-linux SQLiteCpp:x64-linux glog:x64-linux curl:x64-linux fmt:x64-linux'
         vcpkgTriplet: 'x64-linux'
         vcpkgDirectory: '${{ github.workspace }}/vcpkg'
-        vcpkgGitCommitId: '30124253eecff36bc90f73341edbfb4f845e2a1e'
+        vcpkgGitCommitId: '5568f110b509a9fd90711978a7cb76bae75bb092'
     - name: Prints output of run-vcpkg's task
       run: echo "root='${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_ROOT_OUT }}', triplet='${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}' "
 
-    - name: Install gcc-10
-      shell: bash
-      run: |
-           sudo apt update
-           sudo apt install gcc-10 g++-10
     - name: Run CMake
       uses: lukka/run-cmake@main
       with:
